how does it work section- squeeze paragraphs into a smaller column at larger screen sizes for readability. fix issue where some anchors in nav wouldn't show pointer on hover

--- a/source/stylesheets/base.scss
+++ b/source/stylesheets/base.scss
@@ -565,7 +565,7 @@ nav {
     }
   }
 
-  a.nav-link:hover {
+  a:hover {
     cursor: pointer;
   }
 
